Revision history for Selenium-Remote-Driver

0.19   4-11-2014
        [FIREFOX PROFILE]
        - Added Selenium::Remote::Driver::Firefox::Profile for managing Firefox profiles

0.1801 4-9-2014
        [DOCUMENTATION]
        - Using Dist::Zilla & Pod::Weaver to keep the POD as DRY as possible

        [BUG FIXES]
        - Restore broken proxy functionality - should use the value passed in ->new
        - #119 Restore broken find_elements functionality - should return an arrayref or an array

0.18   3-28-2014
        - New maintainer: Daniel Gempesaw <gempesaw@gmail.com>
        - Fix failing tests in CPAN distribution!

        [THINGS THAT MIGHT BREAK YOUR CODE]
        - We now 'croak' instead of returning error strings in a number of
          cases where invalid method calls were made. This should make
          debugging easier in some cases, and is more aligned with our
          documentation which already stated that we would croak on errors.
          Still, your code may depend on the old behavior.
          https://github.com/aivaturi/Selenium-Remote-Driver/commit/7cdf3dce0fcaa48a883d045368c094351754e85a

        - The hover() method on the WebElement has been removed. This is not in the JSON Wire protocol,
          and the same functionality is avialable with the Driver object's move_to() method.
          https://github.com/aivaturi/Selenium-Remote-Driver/pull/77

        [NEW FEATURES]
        - Merged Test::WebDriver into this distribution as Test::Selenium::Remote::Driver.
          Several updates to it are included since the last release. (Mark Stosberg)

        - The existence of most (or all?) key testing methods in
          Test::Selenium::Remote::Driver is now documented, rather than leaving it to users
          to figure out the magic effects of AUTOLOAD on the methods in the parent
          class. (Mark Stosberg)

        - Added type_ok() to Test::Selenium::Remote::Driver, similar to the method by the same name