@@ -29,7 +29,7 @@ t/Firefox-Profile.t
 t/Test-Selenium-Remote-Driver-google.t
 t/Test-Selenium-Remote-Driver.t
 t/Test-Selenium-Remote-WebElement.t
-t/bin/generate-recordings.pl
+t/bin/record.pl
 t/http-server.pl
 t/lib/MockSeleniumWebDriver.pm
 t/mock-recordings/01-driver-mock-MSWin32.json
